<resources>
    <string name="app_name">toko-admin</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Admin</string>
    <string name="nav_header_subtitle">toko@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_category">Category</string>
    <string name="menu_book">Book</string>
    <string name="menu_account">Account</string>

    <string name="button_back_content_description">Back</string>
    <string name="login">Đăng nhập</string>
    <string name="login_greeting">Xin chào,</string>
    <string name="login_instruction">Đăng nhập bằng tài khoản người quản lý</string>
    <string name="username">Tên tài khoản</string>
    <string name="password">Mật khẩu</string>
    <string name="edit_book">Chỉnh sửa thông tin sách</string>
    <string name="edit_book_info_toolbar">Chỉnh sửa thông tin sách</string>
</resources>