<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_book">

    <fragment
        android:id="@+id/nav_book"
        android:name="com.example.toko_admin.views.fragments.BookFragment"
        android:label="@string/menu_book"
        tools:layout="@layout/fragment_book" />

    <fragment
        android:id="@+id/nav_category"
        android:name="com.example.toko_admin.views.fragments.CategoryFragment"
        android:label="@string/menu_category"
        tools:layout="@layout/fragment_category" />

    <fragment
        android:id="@+id/nav_account"
        android:name="com.example.toko_admin.views.fragments.AccountFragment"
        android:label="@string/menu_account"
        tools:layout="@layout/fragment_account" />
</navigation>